[tool.poetry]
name = "universal"
version = "0.1.0"
description = ""
authors = ["AribetAoki <slavovna88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.3"
chromedriver-autoinstaller = "^0.6.2"
selenium = "^4.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
